--- a/method1.ipynb
+++ b/method1.ipynb
@@ -541,6 +541,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### Tunning parameters to increase the performance of RandomForestClassifier"
+      ],
+      "metadata": {
+        "id": "AUx4SzHKOyK0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
@@ -665,13 +674,6 @@
         "y_pred_rf = rf.predict(x_test)\n",
         "y_pred_mlp = mlp.predict(x_test)\n",
         "\n",
-        "# Print classification reports\n",
-        "print(\"Decision Tree Classification Report:\")\n",
-        "print(classification_report(y_test, y_pred_dtc))\n",
-        "\n",
-        "print(\"Random Forest Classification Report:\")\n",
-        "print(classification_report(y_test, y_pred_rf))\n",
-        "\n",
         "print(\"MLP Classifier Classification Report:\")\n",
         "print(classification_report(y_test, y_pred_mlp))\n"
       ],
@@ -680,9 +682,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZrhgQlpw4bTx",
-        "outputId": "8a915473-0327-40a4-d107-89bf290b8744"
+        "outputId": "89e30316-75ea-455e-8ad6-ddc54d8d17da"
       },
-      "execution_count": 17,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,15 +701,15 @@
             "MLP Classifier Classification Report:\n",
             "                                        precision    recall  f1-score   support\n",
             "\n",
-            "      High-grade serous ovarian cancer       0.59      0.53      0.56       184\n",
-            "     Human Diffuse Type Gastric Cancer       0.88      0.78      0.83       454\n",
-            "       Intrahepatic cholangiocarcinoma       0.72      0.94      0.81       233\n",
-            "Non BRCA1/BRCA2 familial breast cancer       0.92      0.85      0.88       216\n",
-            "             Pancreatic adenocarcinoma       0.60      0.64      0.62       168\n",
+            "      High-grade serous ovarian cancer       0.48      0.79      0.60       184\n",
+            "     Human Diffuse Type Gastric Cancer       0.91      0.73      0.81       454\n",
+            "       Intrahepatic cholangiocarcinoma       0.75      0.92      0.83       233\n",
+            "Non BRCA1/BRCA2 familial breast cancer       0.90      0.88      0.89       216\n",
+            "             Pancreatic adenocarcinoma       0.68      0.37      0.48       168\n",
             "\n",
-            "                              accuracy                           0.77      1255\n",
-            "                             macro avg       0.74      0.75      0.74      1255\n",
-            "                          weighted avg       0.78      0.77      0.77      1255\n",
+            "                              accuracy                           0.75      1255\n",
+            "                             macro avg       0.74      0.74      0.72      1255\n",
+            "                          weighted avg       0.79      0.75      0.75      1255\n",
             "\n"
           ]
         },
@@ -725,44 +727,18 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Decision Tree Classification Report:\n",
-            "                                        precision    recall  f1-score   support\n",
-            "\n",
-            "      High-grade serous ovarian cancer       0.63      0.54      0.58       184\n",
-            "     Human Diffuse Type Gastric Cancer       0.80      0.81      0.80       454\n",
-            "       Intrahepatic cholangiocarcinoma       0.75      0.80      0.78       233\n",
-            "Non BRCA1/BRCA2 familial breast cancer       0.89      0.88      0.89       216\n",
-            "             Pancreatic adenocarcinoma       0.65      0.67      0.66       168\n",
-            "\n",
-            "                              accuracy                           0.76      1255\n",
-            "                             macro avg       0.74      0.74      0.74      1255\n",
-            "                          weighted avg       0.76      0.76      0.76      1255\n",
-            "\n",
-            "Random Forest Classification Report:\n",
-            "                                        precision    recall  f1-score   support\n",
-            "\n",
-            "      High-grade serous ovarian cancer       0.75      0.62      0.68       184\n",
-            "     Human Diffuse Type Gastric Cancer       0.91      0.84      0.87       454\n",
-            "       Intrahepatic cholangiocarcinoma       0.80      0.92      0.85       233\n",
-            "Non BRCA1/BRCA2 familial breast cancer       0.91      0.97      0.94       216\n",
-            "             Pancreatic adenocarcinoma       0.71      0.76      0.73       168\n",
-            "\n",
-            "                              accuracy                           0.83      1255\n",
-            "                             macro avg       0.81      0.82      0.81      1255\n",
-            "                          weighted avg       0.84      0.83      0.83      1255\n",
-            "\n",
             "MLP Classifier Classification Report:\n",
             "                                        precision    recall  f1-score   support\n",
             "\n",
-            "      High-grade serous ovarian cancer       0.59      0.53      0.56       184\n",
-            "     Human Diffuse Type Gastric Cancer       0.88      0.78      0.83       454\n",
-            "       Intrahepatic cholangiocarcinoma       0.72      0.94      0.81       233\n",
-            "Non BRCA1/BRCA2 familial breast cancer       0.92      0.85      0.88       216\n",
-            "             Pancreatic adenocarcinoma       0.60      0.64      0.62       168\n",
+            "      High-grade serous ovarian cancer       0.48      0.79      0.60       184\n",
+            "     Human Diffuse Type Gastric Cancer       0.91      0.73      0.81       454\n",
+            "       Intrahepatic cholangiocarcinoma       0.75      0.92      0.83       233\n",
+            "Non BRCA1/BRCA2 familial breast cancer       0.90      0.88      0.89       216\n",
+            "             Pancreatic adenocarcinoma       0.68      0.37      0.48       168\n",
             "\n",
-            "                              accuracy                           0.77      1255\n",
-            "                             macro avg       0.74      0.75      0.74      1255\n",
-            "                          weighted avg       0.78      0.77      0.77      1255\n",
+            "                              accuracy                           0.75      1255\n",
+            "                             macro avg       0.74      0.74      0.72      1255\n",
+            "                          weighted avg       0.79      0.75      0.75      1255\n",
             "\n"
           ]
         }
